[gd_scene load_steps=18 format=3 uid="uid://k10m7sae6uup"]

[ext_resource type="Script" uid="uid://cg1pqyhidk1ad" path="res://Scripts/Utility/encyclopedia_robot_screen.gd" id="1_v1qki"]
[ext_resource type="FontFile" uid="uid://s356y0v84w4" path="res://Assets/fonts/PixelOperator8.ttf" id="2_cr2w7"]
[ext_resource type="Texture2D" uid="uid://bwg7ovj3mk2sw" path="res://Assets/Sprites/UI/Menu/Menu Panel BIG.png" id="2_d3j2r"]
[ext_resource type="Texture2D" uid="uid://cm4kvemyasjsg" path="res://Assets/Sprites/Robots/Weed Eater 9000/Weed Eater 9000.png" id="2_tjctc"]
[ext_resource type="Texture2D" uid="uid://byw4mjba306yh" path="res://Assets/Sprites/Robots/Mecha Freezer/Mecha Freezer.png" id="3_skn1t"]
[ext_resource type="Texture2D" uid="uid://d3jmyypyro3e" path="res://Assets/Sprites/UI/Menu/Small Menu Button Not Pressed.png" id="3_upqyx"]
[ext_resource type="Texture2D" uid="uid://dc3j3rmm8h854" path="res://Assets/Sprites/Robots/Cassa Schierata/Cassa Schierata.png" id="4_s4j6h"]
[ext_resource type="Texture2D" uid="uid://nbgmdxp2swct" path="res://Assets/Sprites/UI/Menu/Small Menu Button Pressed.png" id="4_snpvn"]
[ext_resource type="FontFile" uid="uid://8qixsdylbpdo" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="5_cef0u"]
[ext_resource type="Texture2D" uid="uid://depj0cpi7kstf" path="res://Assets/Sprites/Robots/Fire Hydrant/Firehydrant.png" id="5_m4umy"]
[ext_resource type="Texture2D" uid="uid://bu71iov4gs1o4" path="res://Assets/Sprites/Robots/Romba/Romba.png" id="6_m4umy"]
[ext_resource type="Texture2D" uid="uid://cfof8calkqqq6" path="res://Assets/Sprites/UI/Menu/DB Red Button Not Pressed.png" id="6_snpvn"]
[ext_resource type="PackedScene" uid="uid://12p1be5lu4o4" path="res://Scenes/Utilities/colorscale_filter.tscn" id="7_bvdv8"]
[ext_resource type="Texture2D" uid="uid://b5bavfhcdt2lc" path="res://Assets/Sprites/UI/Menu/DB Red Button Pressed.png" id="7_cef0u"]

[sub_resource type="FontVariation" id="FontVariation_fpv47"]
base_font = ExtResource("5_cef0u")
spacing_glyph = -1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4x86"]
bg_color = Color(0.06666667, 0.09411765, 0.08235294, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.15, 0.13915001, 0.057, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_56vox"]

[node name="Robots" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_v1qki")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_d3j2r")
metadata/_edit_lock_ = true

[node name="Back" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 905.0
offset_right = 846.0
offset_bottom = 1005.0
texture_normal = ExtResource("3_upqyx")
texture_pressed = ExtResource("4_snpvn")
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9019608, 0.9019608, 0.9019608, 1)
theme_override_fonts/font = SubResource("FontVariation_fpv47")
theme_override_font_sizes/font_size = 40
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Testo" type="Label" parent="."]
layout_mode = 0
offset_left = 220.0
offset_top = 60.0
offset_right = 840.0
offset_bottom = 170.0
theme_override_colors/font_color = Color(0.9019608, 0.9019608, 0.9019608, 1)
theme_override_fonts/font = ExtResource("5_cef0u")
theme_override_font_sizes/font_size = 80
text = "Robot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Romba" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 221.0
offset_right = 356.0
offset_bottom = 541.0
focus_mode = 0
texture_normal = ExtResource("6_snpvn")
texture_pressed = ExtResource("7_cef0u")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="Romba"]
texture_filter = 1
layout_mode = 0
offset_left = 32.0
offset_top = 53.0
offset_right = 288.0
offset_bottom = 309.0
texture = ExtResource("6_m4umy")

[node name="WeedEater" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 371.0
offset_top = 221.0
offset_right = 691.0
offset_bottom = 541.0
focus_mode = 0
texture_normal = ExtResource("6_snpvn")
texture_pressed = ExtResource("7_cef0u")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="WeedEater"]
texture_filter = 1
layout_mode = 0
offset_left = 9.0
offset_top = 31.0
offset_right = 265.0
offset_bottom = 287.0
texture = ExtResource("2_tjctc")

[node name="MechaFreezer" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 706.0
offset_top = 221.0
offset_right = 1026.0
offset_bottom = 541.0
focus_mode = 0
texture_normal = ExtResource("6_snpvn")
texture_pressed = ExtResource("7_cef0u")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="MechaFreezer"]
texture_filter = 1
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 288.0
offset_bottom = 280.0
texture = ExtResource("3_skn1t")

[node name="FireHydrant" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 556.0
offset_right = 524.0
offset_bottom = 876.0
focus_mode = 0
texture_normal = ExtResource("6_snpvn")
texture_pressed = ExtResource("7_cef0u")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="FireHydrant"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 26.0
offset_right = 264.0
offset_bottom = 282.0
texture = ExtResource("5_m4umy")

[node name="CassaSchierata" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 539.0
offset_top = 556.0
offset_right = 859.0
offset_bottom = 876.0
focus_mode = 0
texture_normal = ExtResource("6_snpvn")
texture_pressed = ExtResource("7_cef0u")
stretch_mode = 5
metadata/_edit_group_ = true

[node name="TextureRect" type="TextureRect" parent="CassaSchierata"]
texture_filter = 1
layout_mode = 0
offset_left = 24.0
offset_top = 36.0
offset_right = 280.0
offset_bottom = 292.0
texture = ExtResource("4_s4j6h")

[node name="RiquadroRobot" type="Panel" parent="."]
layout_mode = 0
offset_left = 1038.0
offset_top = 74.0
offset_right = 1881.0
offset_bottom = 1006.0
theme_override_styles/panel = SubResource("StyleBoxFlat_h4x86")

[node name="RobotDescriptionPanel" type="Panel" parent="RiquadroRobot"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_56vox")

[node name="RobotName" type="Label" parent="RiquadroRobot/RobotDescriptionPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 23.0
offset_right = 820.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(0.9019608, 0.9019608, 0.9019608, 1)
theme_override_fonts/font = ExtResource("5_cef0u")
theme_override_font_sizes/font_size = 40
text = "Lorem Ipsum Dixe Dixit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RobotDescription" type="Label" parent="RiquadroRobot/RobotDescriptionPanel"]
layout_mode = 0
offset_left = 23.0
offset_top = 91.0
offset_right = 820.0
offset_bottom = 1187.0
theme_override_colors/font_color = Color(0.9019608, 0.9019608, 0.9019608, 1)
theme_override_constants/line_spacing = 8
theme_override_fonts/font = ExtResource("2_cr2w7")
theme_override_font_sizes/font_size = 40
text = "Gallia est omnis divisa in partes tres, quarum unam incolunt Belgae, aliam Aquitani, tertiam qui ipsorum lingua Celtae, nostra Galli appellantur. Hi omnes lingua, institutis, legibus inter se differunt. Gallos ab Aquitanis Garumna flumen, a Belgis Matrona et Sequana dividit. Horum omnium fortissimi sunt Belgae, propterea quod a cultu atque humanitate provinciae longissime absunt, minimeque ad eos mercatores saepe commeant atque ea quae ad effeminandos animos pertinent important,"
autowrap_mode = 3

[node name="Colorscale Filter" parent="." instance=ExtResource("7_bvdv8")]

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Romba" to="." method="_on_romba_pressed"]
[connection signal="pressed" from="WeedEater" to="." method="_on_weed_eater_pressed"]
[connection signal="pressed" from="MechaFreezer" to="." method="_on_mecha_freezer_pressed"]
[connection signal="pressed" from="FireHydrant" to="." method="_on_fire_hydrant_pressed"]
[connection signal="pressed" from="CassaSchierata" to="." method="_on_cassa_schierata_pressed"]
